assets/css/aero.css
/* ... */
a.aicon-branch span { background-position: -160px 0; }
a.aicon-code span { background-position: -60px 0; }
a.aicon-rate span { background-position: -180px 0; }
a.aicon-path span { background-position: 0 0; }
a.aicon-role span { background-position: -40px 0; }

/* Active */
a.aicon-basic:hover span, .aero-menu-active a.aicon-basic span { background-position: -80px -40px; }
a.aicon-style:hover span, .aero-menu-active a.aicon-style span { background-position: -100px -40px; }
a.aicon-nav:hover span, .aero-menu-active a.aicon-nav span { background-position: -140px -40px; }
a.aicon-loc:hover span, .aero-menu-active a.aicon-loc span { background-position: -20px -40px; }
a.aicon-alert:hover span, .aero-menu-active a.aicon-alert span { background-position: -120px -40px; }
a.aicon-branch:hover span, .aero-menu-active a.aicon-branch span { background-position: -160px -40px; }
a.aicon-code:hover span, .aero-menu-active a.aicon-code span { background-position: -60px -40px; }
a.aicon-rate:hover span, .aero-menu-active a.aicon-rate span { background-position: -180px -40px; }
a.aicon-path:hover span, .aero-menu-active a.aicon-path span { background-position: 0 -40px; }
a.aicon-role:hover span, .aero-menu-active a.aicon-role span { background-position: -40px -40px; }

/**
*  Sidebar tip | .tip
*/
.aero-menu-tip {
	border-radius:9px;
	font-size:1.1em;
	font-weight:600;
	background: none repeat scroll 0 0 #5e696d;
    color: #fff;
    left: 70px;
    padding: 15px 20px;
    position: absolute;
    top: 200px;
    z-index: 1;
    line-height:1em;
}
.aero-menu-tip span {
	display: block;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 5px 5px 5px 0;
	border-color: transparent #5E696D transparent transparent;
	position: absolute;
	left: -5px;
	top:19px;
	z-index:999999999;
}

.aero-admin-wrapper h1 {
	margin:0 0 10px 0;
	line-height:20px;
	font-size:18px;
	color:#DB5052;
	font-family:'Source Sans Pro';
	font-weight: 600;
}

.aero-loc-text {
	text-align: right;
    padding-right: 5px;
}
.aero-loc-text.aero-radio input {
	float: right;
}
.aero-loc-text span {
	text-transform: uppercase;
	font-size: 11px;
	font-weight: 700;
	color: #4D4D4D;
	line-height: 12px;
	padding-right: 10px;
}

.aero-admin-wrapper p {
	color:#9E9A9A;
	margin-bottom:30px;
}
.aero-section {
	display:none;
	padding: 20px;
}
.aero-section.open {
	display:block;
}
.aero-section a.aero-btn-red {
	margin-right:10px!important;
}

.aero-section label {
	display: block;
	color: #4d4d4d;
	padding-bottom: 0.5em;
	text-transform: uppercase;
	font-weight: 600;
	font-size: 0.9em;
}
.aero-section input[type=text], .aero-section textarea, .aero-section select, a.aero-multi-drop {
	background:#fff;
	border: 1px solid #E1E1E1;
	font-size: 15px;
	font-weight: 400;
	font-family: 'Source Sans Pro';
	line-height: 30px;
	margin-bottom: 20px;
	padding: 5px 10px;
	width: 380px;
	text-align:left!important;
	box-shadow:inset 0 1px 0 rgba(0,0,0,0.1);
	color:#1a74ba;
	outline:none;
	line-height: 30px;
	-webkit-appearance: menu;
}
.aero-section textarea {
    line-height: 20px!important;
    padding-top: 10px;
}

.aero-del-nav {
	font-weight: bold!important;
	display: inline-block;
	color: #f16a5c;
	margin-left: 10px!important;
	font-size: 18px!important;
}

/* Multi Select */
.aero-multi-select { position:relative; }
.aero-multi-select ul, .aero-multi-select ul li { list-style:  none; padding:0; margin:0;}
.aero-multi-drop { display:block; }
.aero-multi-select ul {
    background:#fff;
    position: absolute;
    top: 42px;
    left: 0;
    border: 1px solid #ccc;
    width: 400px;
    box-sizing: content-box;
    height: 160px;
    overflow-y: auto;
    overflow-x: hidden;
}

.aero-multi-select ul li label {
    padding: 6px 10px;
    display: block;
}

.aero-multi-select ul li input {
    margin-right:10px;
    display: inline-block!important;
}

.aero-radio { margin-bottom:20px; }
.aero-radio input { float:none; }
.aero-section select { height:40px; width:400px; }
.aero-fld-sml { width:120px!important;}
.aero-move { display:inline-block; width:220px; }
.aero-strip-menu a { -webkit-box-sizing:content-box; box-sizing: content-box; -moz-box-sizing: content-box; background-image: none;}
.aero-stop span {   text-align: center!important;   }

/**
*	Step/Guide Tools | .aero-item-tools
*/
.aero-blanket {
	position:absolute;
	z-index:9999999999999;
	background:#25303f;
	width:310px;
	height:100%;
}
.aero-sidebar .aero-item-tools {
	float: none;
	position: absolute;
	top: 2px;
	right: -5px;
}
.aero-sidebar .aero-item-tools a {
	background:#25303f;
	display:block;
	color:#B2B6BB;
	padding:14px 5px!important;
	float: right;
}

.aero-body .aero-add-step { position:relative; }
.aero-sidebar .aero-add-step a { padding-left:40px!important; }
.aero-sidebar .aero-add-step i {
	position: absolute;
	font-size: 14px;
	top: 18px;
	left: 24px;
	color: #fff;
	font-weight: 100;
}
.aero-host span,.aero-host input { float:left; }
.aero-host span {
	  color: #909090;
	  padding: 11px;
	  border: 1px solid #E1E1E1;
	  box-shadow: inset 0 1px 0 rgba(0,0,0,0.1);
}
.aero-host input { width:200px!important; }
.aero-assoc-select { width:70%!important; margin-right:15px; }
.aero-pathways-search .aero-btn-grey, .aero-roles-search .aero-btn-grey { width:20%; }
.aero-assoc { margin-bottom:20px; border-top:5px solid #aaa; }
.aero-assoc li span {
	display: block;
	background: #fff;
	padding: 0 15px;
	line-height: 39px;
	font-size: 14px;
}
.aero-assoc li a {
	float:right;
}
.aero-assoc a.aero-btn-grey {
	padding:11px 15px!important;
}

/**
*  Errors & help
*/
.aero-error-box ul, .aero-error-box li { padding:0; margin:0; }
.aero-error-box {
	background: #DB5052;
	color: #fff;
	padding: 10px;
	margin-bottom: 1em;
	margin-top: -0.5em;
}
.aero-require-error {
	border: 1px solid #d7444e!important
}

.aero-help-block {
    color: #A4A0A0;
    padding-bottom: 26px;
}
.aero-admin-wrapper .aero-help-block li a {
    padding: 0;
    border: 0;
    color: #2078B3;
}
/* ... */

